--- a/android/record/build.gradle
+++ b/android/record/build.gradle
@@ -28,6 +28,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     api 'com.kailashdabhi:om-recorder:1.1.0'
-    api project(':farwolf.weex')
+    api 'com.farwolf.weexplus:farwolf.weex:latest.integration'
 
 }
